crates/parser/tests/snapshots/parser_test__m12_trait_impl.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefType:
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 31
                    - 34
            - - y
              - Named:
                  name: Int
                  span:
                    - 39
                    - 42
      deriving: []
      span:
        - 13
        - 44
  - DefTrait:
      visibility: Private
      name: Eq
      type_var: a
      superclasses: []
      methods:
        - name: eq
          visibility: Private
          type_params: []
          params:
            - name: self
              ty:
                Var:
                  name: a
                  span:
                    - 77
                    - 78
              span:
                - 71
                - 78
            - name: other
              ty:
                Var:
                  name: a
                  span:
                    - 87
                    - 88
              span:
                - 80
                - 88
          constraints: []
          return_type:
            Named:
              name: Bool
              span:
                - 93
                - 97
          body:
            Lit:
              value: Unit
              span:
                - 64
                - 97
          span:
            - 64
            - 97
      span:
        - 46
        - 99
  - DefImpl:
      trait_name: Eq
      target_type:
        Named:
          name: Point
          span:
            - 109
            - 114
      type_constraints: []
      methods:
        - name: eq
          visibility: Private
          type_params: []
          params:
            - name: a
              ty: ~
              span:
                - 129
                - 130
            - name: b
              ty: ~
              span:
                - 132
                - 133
          constraints: []
          return_type: ~
          body:
            BinaryOp:
              op: And
              lhs:
                BinaryOp:
                  op: Eq
                  lhs:
                    FieldAccess:
                      expr:
                        Var:
                          name: a
                          span:
                            - 137
                            - 138
                      field: x
                      span:
                        - 137
                        - 140
                  rhs:
                    FieldAccess:
                      expr:
                        Var:
                          name: b
                          span:
                            - 144
                            - 145
                      field: x
                      span:
                        - 144
                        - 147
                  span:
                    - 137
                    - 147
              rhs:
                BinaryOp:
                  op: Eq
                  lhs:
                    FieldAccess:
                      expr:
                        Var:
                          name: a
                          span:
                            - 151
                            - 152
                      field: y
                      span:
                        - 151
                        - 154
                  rhs:
                    FieldAccess:
                      expr:
                        Var:
                          name: b
                          span:
                            - 158
                            - 159
                      field: y
                      span:
                        - 158
                        - 161
                  span:
                    - 151
                    - 161
              span:
                - 137
                - 161
          span:
            - 122
            - 161
      span:
        - 101
        - 163
