crates/parser/tests/snapshots/parser_test__match_guard.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefType:
      platform: ~
      name: Option
      visibility: Private
      type_params:
        - a
      kind:
        Sum:
          variants:
            - name: Some
              fields:
                - Var:
                    name: a
                    span:
                      - 23
                      - 24
              span:
                - 18
                - 25
            - name: None
              fields: []
              span:
                - 28
                - 32
      deriving: []
      span:
        - 1
        - 32
  - DefFn:
      platform: ~
      name: f
      visibility: Private
      type_params: []
      params:
        - name: x
          ty:
            App:
              name: Option
              args:
                - Named:
                    name: Int
                    span:
                      - 49
                      - 52
              span:
                - 42
                - 53
          span:
            - 39
            - 53
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 58
            - 61
      body:
        Match:
          scrutinee:
            Var:
              name: x
              span:
                - 70
                - 71
          arms:
            - pattern:
                Constructor:
                  name: Some
                  args:
                    - Var:
                        name: v
                        span:
                          - 83
                          - 84
                  span:
                    - 78
                    - 85
              guard:
                BinaryOp:
                  op: Gt
                  lhs:
                    Var:
                      name: v
                      span:
                        - 89
                        - 90
                  rhs:
                    Lit:
                      value:
                        Int: 0
                      span:
                        - 93
                        - 94
                  span:
                    - 89
                    - 94
              body:
                Var:
                  name: v
                  span:
                    - 98
                    - 99
              span:
                - 78
                - 99
            - pattern:
                Wildcard:
                  span:
                    - 105
                    - 106
              guard: ~
              body:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 110
                    - 111
              span:
                - 105
                - 111
          span:
            - 64
            - 114
      span:
        - 33
        - 114
