crates/parser/tests/snapshots/parser_test__pub_import.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - Import:
      is_pub: true
      path: core/option
      names:
        - name: Option
          alias: ~
        - name: Some
          alias: ~
        - name: None
          alias: ~
      span:
        - 0
        - 43
